--- a/test/valid/www/404.html
+++ b/test/valid/www/404.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Example 404 Doc</title>
-		<link href="/styles/sass/index.css" rel="stylesheet">
+		<link href="/dist/styles/sass/index.css" rel="stylesheet">
 	</head>
 	<body>
 		<h1>404 Error</h1>
