--- a/test/valid/www/index.html
+++ b/test/valid/www/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Example Document</title>
-		<link href="/styles/scss/index.css" rel="stylesheet">
+		<link href="/dist/styles/scss/index.css" rel="stylesheet">
 	</head>
 	<body>
 		<main>
